syntax = "proto3";

package MRA.RobotsportsLocalBallTracking;

//import "datatypes/WorldState.proto";

message BallFeature
{
	float x = 1;
    float y = 2;
    float z = 3;
    float confidence = 4;
    float sigma = 5; // standard deviation of sensor noise of the measurement                  
    float dist = 6;                    // distance to robot
    float timestamp = 7;               // timestamp 
}


message Input
{
    double	ts = 1;		// Time stamp of data
    repeated BallFeature omnivision_balls = 2;
    repeated BallFeature stereovision_balls = 3;
}
