syntax = "proto3";

package MRA.RobotsportsLocalBallTracking;

message TrackedBall
{
	float x = 1;
    float y = 2;
    float z = 3;
	float vx = 4;
    float vy = 5;
    float vz = 6;
    float confidence = 7;
    float timestamp = 8;               // timestamp 
} 

message Output
{
    TrackedBall ball = 1;
    TrackedBall ball_prev = 2;
    TrackedBall ball_now = 3;		// ball position extrapolated to time = now (liveseconds)
}




